--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "ethers": "^5.6.1",
+    "framer-motion": "^12.4.7",
     "jspdf": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,9 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-type-animation": "^3.2.0",
     "redux": "^5.0.1",
+    "swiper": "^11.2.4",
     "web3": "^4.16.0"
   },
   "devDependencies": {
