--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-slick": "^0.30.3",
     "react-type-animation": "^3.2.0",
     "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.4",
     "web3": "^4.16.0"
   },
