--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^5.6.1",
     "framer-motion": "^12.4.7",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
